<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="-1dp">

    <EditText
        android:id="@+id/etAnos"
        android:layout_width="189dp"
        android:layout_height="48dp"
        android:layout_marginEnd="4dp"
        android:ems="10"
        android:hint="@string/Anos"
        android:importantForAutofill="no"
        android:inputType="number"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        app:layout_constraintBaseline_toBaselineOf="@+id/etHoras"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/etSalario"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginEnd="10dp"
        android:ems="10"
        android:hint="@string/Salario"
        android:importantForAutofill="no"
        android:inputType="number"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        app:layout_constraintBaseline_toBaselineOf="@+id/etValorHora"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/radioGroup2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/etHoras"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginBottom="505dp"
        android:ems="10"
        android:hint="@string/Horas"
        android:importantForAutofill="no"
        android:inputType="number"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup2" />

    <EditText
        android:id="@+id/etValorHora"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="104dp"
        android:ems="10"
        android:hint="@string/valorHora"
        android:importantForAutofill="no"
        android:inputType="number"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etAnos" />

    <Button
        android:id="@+id/btnCalcular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="148dp"
        android:importantForAutofill="no"
        android:text="@string/calcular"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etSalario" />

    <TextView
        android:id="@+id/txtVRes"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginBottom="68dp"
        android:text=""
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <RadioGroup
        android:id="@+id/radioGroup2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="43dp"
        android:layout_marginEnd="63dp"
        android:layout_marginBottom="42dp"
        app:layout_constraintBottom_toTopOf="@+id/etHoras"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/rbHorista"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Horista" />

        <RadioButton
            android:id="@+id/rbTitular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Titular" />
    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>
